--- a/RedisSandbox/RedisSandbox.csproj
+++ b/RedisSandbox/RedisSandbox.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
+	 <Using Include="Microsoft.AspNetCore.Mvc;" />
   </ItemGroup>
 
 </Project>
